<resources>
    <string name="app_name">TeloMobileApp</string>
    <string name="logo">Transporte telo</string>
    <string name="btn_home">Inicio</string>
    <string name="btn_currentservice">Servicio Actual</string>
    <string name="btn_historic">Histórico</string>
    <string name="btn_account">Estado de Cuenta</string>
    <string name="btn_userprofile">Perfil</string>
    <string-array name="filtro_servicios">
        <item>Últimos diez</item>
        <item>Mes actual</item>
        <item>Mes anterior</item>
        <item>Dos meses atrás</item>
    </string-array>
    <string-array name="filtro_estadocuenta">
        <item>Mes actual</item>
        <item>Mes anterior</item>
        <item>Dos meses atrás</item>
    </string-array>
</resources>